--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,7 +1,7 @@
 [postgres]
-host = "ep-round-cloud-123456.us-east-2.aws.neon.tech"
+host = "ep-summer-math-agqv2zjz-pooler.c-2.eu-central-1.aws.neon.tech"
 dbname = "neondb"
 user = "neondb_owner"
-password = "your_password_here"
+password = "npg_Qc5H7WYBmasb"
 port = 5432
 sslmode = "require"
